src/index.css
@font-face {
    font-family: "pokemonSolid";
    src: url("./font/solid-text/pokemon_solid-webfont.woff2") format("woff2"),
        url("./font/solid-text/pokemon_solid-webfont.woff") format("woff");
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: "pokemonHollow";
    src: url("./font/hollow-text/pokemon_hollow-webfont.woff2") format("woff2"),
        url("./font/hollow-text/pokemon_hollow-webfont.woff") format("woff");
    font-weight: normal;
    font-style: normal;
}

.card-loading,
.card {
    height: 225px;
    width: 200px;
    border-radius: 16px;
    border: 1px solid #000000;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    background-image: linear-gradient(#ff000077, rgba(0, 0, 0, 0.5), white);
}

.card-loading {
    text-align: center;
    font-family: "pokemonSolid";
    font-weight: bold;
    color: #ffde00;
    -webkit-text-stroke: 1px #3b4cca;
    font-size: 2rem;
    padding: 0.5rem;
}

.card > img {
    height: 150px;
}

.card-name {
    max-width: 175px;
    text-align: center;
    font-family: "pokemonSolid";
    font-weight: bold;
    color: #ffde00;
    -webkit-text-stroke: 1px #3b4cca;
    font-size: 1.5rem;
    letter-spacing: 0.2rem;
    padding: 0.2rem;
    overflow: hidden;
    text-overflow: ellipsis;
}

